--- a/src/global.scss
+++ b/src/global.scss
@@ -175,7 +175,7 @@
   }
 }
 
-.edit-red-class {
+.red-class {
   --background: rgb(255, 221, 221)b; /* Light yellow background */
   ion-content {
     --background: rgb(255, 221, 221)b; /* Ensure content has the same background */
