--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -33,6 +33,9 @@
       <ion-fab-button id='search' (click)="search()">
         <ion-icon name="search"></ion-icon>
       </ion-fab-button>  
+      <ion-fab-button id='help' (click)="guide()">
+        <ion-icon name="help"></ion-icon>
+      </ion-fab-button>  
     </ion-row>
   </ion-fab>
 
@@ -111,17 +114,17 @@
         </tr>
         <tr>
           <td>{{distance}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalDistance !== undefined">
+          <td *ngIf="archivedTrack.features[0].properties.totalDistance > -1">
             {{archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km</td>
         </tr>
         <tr>
           <td>{{eGain}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalElevationGain !== undefined">
+          <td *ngIf="archivedTrack.features[0].properties.totalElevationGain > -1">
             {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</td>
         </tr>
         <tr>
           <td>{{eLoss}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalElevationLoss !== undefined">
+          <td *ngIf="archivedTrack.features[0].properties.totalElevationLoss > -1">
             {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</td>
         </tr>
         <tr>
