search result in black

--- a/src/app/search-modal/search-modal.component.html
+++ b/src/app/search-modal/search-modal.component.html
@@ -8,15 +8,22 @@
 </ion-header>
 
 <ion-content class="nodal-content">
+
+  <!-- Notice -->
+  <div class="notice" *ngIf="showCurrent">{{notice1}}</div> 
+
+  <!-- Find location -->
   <ion-row *ngIf="showSelection">
     <ion-col size="10">
+      <ion-list>
       <ion-item>
         <ion-input 
           [(ngModel)]="query" 
           placeholder={{placeholder}}></ion-input>
       </ion-item>
+      </ion-list>
     </ion-col>
-    <ion-col size="2">
+    <ion-col size="2" class="center-col">
         <ion-button 
         (click)="searchLocation()" 
         fill="clear" 
@@ -26,6 +33,20 @@
     </ion-col>
   </ion-row>
 
+  <!-- Notice -->
+  <div class="notice" *ngIf="showCurrent">{{notice2}}</div> 
+
+  <!-- Current location -->
+  <ion-list id="current" *ngIf="showCurrent">
+    <ion-radio-group [(ngModel)]="selectedCurrent" (ionChange)="onCurrentLocationChange($event)">
+      <ion-item lines="none" class="full-width-item">
+        <ion-label class="full-width-label">{{currentLocation}}</ion-label>
+        <ion-radio color="warning" value="current" class="full-width-radio"></ion-radio>
+      </ion-item>
+    </ion-radio-group>
+  </ion-list>
+
+  <!-- Selection among different locations -->  
   <ion-list *ngIf="results.length > 0">
     <ion-item 
       *ngFor="let result of results" 
@@ -33,6 +54,7 @@
       {{ result.display_name }}
     </ion-item>
   </ion-list>
+
   <!-- means of transportation --> 
   <ion-list id="transportation" *ngIf="showTransportation">
     <ion-radio-group [(ngModel)]="selectedTransportation">
@@ -63,5 +85,9 @@
   <ion-buttons class="modal-buttons" *ngIf="showTransportation">
     <ion-button class="modal-confirm-button" (click)="confirmSelection()">OK</ion-button>
   </ion-buttons>  
-  <ion-spinner *ngIf="loading"></ion-spinner>
+<ion-row *ngIf="loading" class="spinner-row">
+  <ion-col>
+    <ion-spinner class="center-spinner" color="dark"></ion-spinner>
+  </ion-col>
+</ion-row>
 </ion-content>
