--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -31,6 +31,10 @@
   <ion-grid>
     <ion-row>
       <ion-col size="4">
+        <ion-button [ngClass]="(presentSearch) ? 'redEnabled' : 'redDisabled'" (click)="removeSearch()"
+          expand="block" [disabled]='(!presentSearch)'>
+          <div>{{search}}</div>
+        </ion-button>
       </ion-col>
       <ion-col size="4">
         <ion-button [ngClass]="(numChecked != 1) ? 'greenDisabled' : 'greenEnabled'" (click)="exportTrack()"
