--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,46 +8,7 @@
   </ion-fab>
 
   <ion-grid>
-    <!-- archived track -->
-    <ion-row class="centered-content">
-      <div><strong>{{title[0][languageIndex]}}</strong></div>
-    </ion-row>
-    <ion-row>
-      <ion-col size="5" offset="2">
-        <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Current')">
-          <div class="pick" >{{title[4][languageIndex]}}</div>
-        </ion-button>
-      </ion-col>  
-      <ion-col size="2" offset="1">
-        <div class="line" [ngStyle]="{'background-color': currentColor}"></div>
-      </ion-col>  
-    </ion-row>
-    <ion-row class="centered-content">
-      <div><strong>{{title[1][languageIndex]}}</strong></div>
-    </ion-row>
-    <ion-row>
-      <ion-col size="5" offset="2">
-        <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Archived')">
-          <div class="pick" >{{title[4][languageIndex]}}</div>
-        </ion-button>
-      </ion-col>  
-      <ion-col size="2" offset="1">
-        <div class="line" [ngStyle]="{'background-color': archivedColor}"></div>
-      </ion-col>  
-    </ion-row>
-    <ion-row class="centered-content">
-      <div><strong>{{title[2][languageIndex]}}</strong></div>
-    </ion-row>
-    <ion-row>
-      <ion-col size="6" *ngFor="let baseMap of baseMaps">
-        <ion-card button (click)="selectBaseMap(baseMap)">
-          <img [src]="baseMap.image" alt="{{ baseMap.name }} Example"  class="map-image">
-          <ion-card-header>
-            <ion-card-title>{{ baseMap.name }}</ion-card-title>
-          </ion-card-header>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+    <!-- Language selection -->
     <ion-row class="centered-content">
       <div><strong>{{title[3][languageIndex]}}</strong></div>
     </ion-row>
@@ -81,10 +42,51 @@
         </ion-row>
         </ion-radio-group>
       </ion-list>
+
+    <!-- Map selection -->
+    <ion-row class="centered-content">
+      <div><strong>{{title[2][languageIndex]}}</strong></div>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6" *ngFor="let baseMap of baseMaps">
+        <ion-card button (click)="selectBaseMap(baseMap)">
+          <img [src]="baseMap.image" alt="{{ baseMap.name }} Example"  class="map-image">
+          <ion-card-header>
+            <ion-card-title>{{ baseMap.name }}</ion-card-title>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+      <!-- Current track color -->
+    <ion-row class="centered-content">
+      <div><strong>{{title[0][languageIndex]}}</strong></div>
+    </ion-row>
+    <ion-row>
+      <ion-col size="5" offset="2">
+        <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Current')">
+          <div class="pick" >{{title[4][languageIndex]}}</div>
+        </ion-button>
+      </ion-col>  
+      <ion-col size="2" offset="1">
+        <div class="line" [ngStyle]="{'background-color': currentColor}"></div>
+      </ion-col>  
+    </ion-row>
+
+    <!-- Reference track color -->
+    <ion-row class="centered-content">
+      <div><strong>{{title[1][languageIndex]}}</strong></div>
+    </ion-row>
+    <ion-row>
+      <ion-col size="5" offset="2">
+        <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Archived')">
+          <div class="pick" >{{title[4][languageIndex]}}</div>
+        </ion-button>
+      </ion-col>  
+      <ion-col size="2" offset="1">
+        <div class="line" [ngStyle]="{'background-color': archivedColor}"></div>
+      </ion-col>        
+    </ion-row>
     </ion-grid>
 
-  
-
-
-
-</ion-content>
+  </ion-content>
