--- a/src/global.scss
+++ b/src/global.scss
@@ -187,6 +187,13 @@
   }
 }
 
+.blue-class {
+  --background: rgb(221, 221, 255); /* Light yellow background */
+  ion-content {
+    --background: rgb(221, 221, 255); /* Ensure content has the same background */
+  }
+}
+
 /* Header */
 .modal-header {
   width: 100%; /* Full width */
@@ -314,4 +321,8 @@
   bottom: 8px; /* Distance from the bottom of the map */
   right: 8px;  /* Distance from the right of the map */
   z-index: 1000; /* Ensure it's above other elements */
+}
+
+.padded-list {
+  padding: 0 5px !important; 
 }
