--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -39,7 +39,7 @@
     </ion-row>
   </ion-fab>
 
-  <ion-fab slot="fixed" horizontal="center" vertical="bottom">
+  <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom">
     <ion-row>
       <ion-fab-button id='list' (click)="gotoPage('tab2')">
         <ion-icon name="list"></ion-icon>
