--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,11 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-label id="title">{{title}}</ion-label>
-    <div class="fab-container">
-      <ion-fab-button (click)="fs.goHome()">
-        <ion-icon name="home"></ion-icon>
-      </ion-fab-button>
-    </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="10">
+        <ion-title id="title">{{ title }}</ion-title>        
+      </ion-col>
+      <ion-col size="2">
+        <ion-fab-button class = "header-button" shape="round" (click)="fs.goHome()">
+          <ion-icon name="home"></ion-icon>
+        </ion-fab-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>  
   </ion-toolbar>
 </ion-header>
 
@@ -51,7 +57,7 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row class="move-up">
       <ion-col size="4">
         <ion-button [ngClass]="(numChecked == 0) ? 'redDisabled' : 'redEnabled'" (click)="deleteTracks()" expand="block"
           [disabled]='(numChecked == 0)'>
