--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,34 +1,30 @@
-// header
-
-.fab-container {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-ion-toolbar{
+/* Ensure toolbar height */
+ion-toolbar {
     height: 75px;
+    display: flex;
+    align-items: center; /* Center content vertically */
 }
 
+/* Title Styling */
 #title {
     margin-left: 20px;
-    padding-top: 20px;
-    font-size: 20px;
-    font-family: 'Arial, sans-serif';
+    font-size: 15px;
+    font-family: Arial, sans-serif;
     font-weight: bold;
-    line-height: 75px;
-}  
+    top: 25px;
+}
 
-ion-icon {
-    color: black
-  }  
-  
-  ion-fab-button {
+/* Ensure button is visible */
+.header-button {
     --background: rgb(255, 221, 221) !important;
-    --color: black
-  }
+    --color: black;
+    top: -20px;
+}
 
-   
+/* Ensure icon is black */
+ion-icon {
+    color: black;
+}
 
 // ion-checkbox
 
@@ -71,3 +67,6 @@ div{
     --background: gray;
 }
 
+.move-up {
+    padding-bottom: 20px;
+  }
