--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,11 @@
 <ion-header>
   <ion-toolbar>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="10">
-        <ion-title id="title">{{ title }}</ion-title>        
-      </ion-col>
-      <ion-col size="2">
-        <ion-fab-button class = "header-button" shape="round" (click)="fs.goHome()">
-          <ion-icon name="home"></ion-icon>
-        </ion-fab-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>  
+    <ion-title id="title">{{ title[languageIndex] }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button class="header-button" shape="round" fill="solid" (click)="fs.goHome()">
+        <ion-icon slot="icon-only" name="home"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -39,21 +33,21 @@
       <ion-col size="4">
         <ion-button [ngClass]="(presentSearch) ? 'redEnabled' : 'redDisabled'" (click)="removeSearch()"
           expand="block" [disabled]='(!presentSearch)'>
-          <div>{{search}}</div>
+          <div>{{search[languageIndex]}}</div>
         </ion-button>
       </ion-col>
       <ion-col size="4">
         <ion-button [ngClass]="(numChecked != 1) ? 'greenDisabled' : 'greenEnabled'" (click)="exportTrack()"
           expand="block" [disabled]='(numChecked != 1)'>
-          <div>{{export}}</div>
+          <div>{{export[languageIndex]}}</div>
         </ion-button>
       </ion-col>
       <ion-col size="4">
         <ion-button *ngIf="layerVisibility != 'multi'" class='greenEnabled' (click)="displayAllTracks(true)" expand="block">
-          <div>{{all}}</div>
+          <div>{{all[languageIndex]}}</div>
         </ion-button>
         <ion-button *ngIf="layerVisibility == 'multi'" class='redEnabled' (click)="displayAllTracks(false)" expand="block">
-          <div>{{hideAll}}</div>
+          <div>{{hideAll[languageIndex]}}</div>
         </ion-button>
       </ion-col>
     </ion-row>
@@ -61,23 +55,23 @@
       <ion-col size="4">
         <ion-button [ngClass]="(numChecked == 0) ? 'redDisabled' : 'redEnabled'" (click)="deleteTracks()" expand="block"
           [disabled]='(numChecked == 0)'>
-          <div>{{remove}}</div>
+          <div>{{remove[languageIndex]}}</div>
         </ion-button>
       </ion-col>
       <ion-col size="4">
         <ion-button [ngClass]="(numChecked != 1) ? 'greenDisabled' : 'greenEnabled'" (click)="editTrack()"
           expand="block" [disabled]='(numChecked != 1)'>
-          <div>{{edit}}</div>
+          <div>{{edit[languageIndex]}}</div>
         </ion-button>
       </ion-col>
       <ion-col size="4">
         <ion-button *ngIf="(numChecked == 1)" class= 'greenEnabled' (click)="displayTrack(true)"
           expand="block">
-          <div>{{display}}</div>
+          <div>{{display[languageIndex]}}</div>
         </ion-button>
         <ion-button *ngIf="(numChecked != 1)" [ngClass]="((layerVisibility != 'archived') || !archivedPresent) ? 'redDisabled' : 'redEnabled'" (click)="displayTrack(false)"
           expand="block" [disabled]="(layerVisibility != 'archived') || !archivedPresent">
-          <div>{{hide}}</div>
+          <div>{{hide[languageIndex]}}</div>
         </ion-button>
       </ion-col>
     </ion-row>
